Implement asynchronous decompiling of multiple files