@@ -26,7 +26,12 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
+import java.util.concurrent.Executors;
+import java.util.concurrent.LinkedBlockingQueue;
+import java.util.function.Consumer;
 import java.util.function.Predicate;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -58,7 +63,7 @@ public class BspSource {
     /**
      * Starts BSPSource
      */
-    public void run(List<BspFileEntry> entries) {
+    public void run(List<BspFileEntry> entries, Listener listener) {
         // some benchmarking
         long startTime = System.currentTimeMillis();
 
@@ -70,27 +75,59 @@ public class BspSource {
         if (entries.isEmpty())
             return;
 
-        for (BspFileEntry entry : entries) {
+        var outputQueue = new LinkedBlockingQueue<Signal>();
+
+        try (var executorService = Executors.newWorkStealingPool()) {
+            for (int i = 0; i < entries.size(); i++) {
+                int finalI = i; // java....
+                executorService.submit(() -> decompile(entries.get(finalI), finalI, outputQueue));
+            }
+
             try {
-                decompile(entry);
-                System.gc(); // try to free some resources
-            } catch (Exception ex) {
-                // likely to be a critical error, but maybe it will work
-                // with other files
-                L.log(Level.SEVERE, "Decompiling error", ex);
+                int remainingTasks = entries.size();
+                while (remainingTasks > 0) {
+                    var signal = outputQueue.take();
+                    if (signal instanceof Signal.TaskUpdated info) {
+                        listener.onProgress(info.index(), info.update());
+                    } else if (signal instanceof Signal.TaskFinished info) {
+                        listener.onFinished(info.index(), info.severeException(), info.warnings());
+                        remainingTasks--;
+                    }
+                }
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
             }
         }
 
         // get total execution time
         double duration = (System.currentTimeMillis() - startTime) / 1000.0;
-        L.log(Level.INFO, "Processed {0} file(s) in {1} seconds",
-                new Object[]{entries.size(), String.format("%.4f", duration)});
+        L.info("Processed %d file(s) in %.4f seconds".formatted(entries.size(), duration));
+    }
+
+    private void decompile(BspFileEntry entry, int index, LinkedBlockingQueue<Signal> outputQueue) {
+        Exception severeException = null;
+        Set<Warning> warnings = Set.of();
+
+        try {
+            warnings = decompile(
+                    entry,
+                    update -> outputQueue.add(new Signal.TaskUpdated(index, update))
+            );
+        } catch (Exception e) {
+            severeException = e;
+        } finally {
+            outputQueue.add(new Signal.TaskFinished(index, severeException, warnings));
+        }
     }
 
     /**
      * Starts the decompiling process
      */
-    private void decompile(BspFileEntry entry) {
+    private Set<Warning> decompile(BspFileEntry entry, Consumer<ProgressUpdate> progressCallback)
+            throws BspSourceException {
+
+        var warnings = new HashSet<Warning>();
+
         Path bspFile = entry.getBspFile();
         Path vmfFile = entry.getVmfFile();
 
@@ -99,6 +136,7 @@ public class BspSource {
         Path nmosFile = entry.getNmosFile();
 
         // load BSP
+        progressCallback.accept(ProgressUpdate.LOADING);
         L.log(Level.INFO, "Loading {0}", bspFile);
 
         var bsp = new BspFile();
@@ -107,8 +145,10 @@ public class BspSource {
         try {
             bsp.load(bspFile);
         } catch (IOException ex) {
-            L.log(Level.SEVERE, "Can't load " + bspFile, ex);
-            return;
+            // Log AND throw exception. Logging is for decompilation log and exception for task result
+            String message = "Error loading '%s'".formatted(bspFile);
+            L.log(Level.SEVERE, message, ex);
+            throw new BspSourceException(message, ex);
         }
 
         if (config.loadLumpFiles) {
@@ -120,12 +160,17 @@ public class BspSource {
 
         // extract embedded files
         if (config.unpackEmbedded) {
+            progressCallback.accept(ProgressUpdate.EXTRACTING_EMBEDDED);
+
             try {
                 bsp.getPakFile().unpack(entry.getPakDir(), fileFilter);
             } catch (IOException ex) {
-                L.log(Level.WARNING, "Can't extract embedded files", ex);
+                warnings.add(Warning.ExtractEmbedded);
+                L.log(Level.SEVERE, "Can't extract embedded files", ex);
             }
         }
+
+        progressCallback.accept(ProgressUpdate.READING);
 
         var reader = new BspFileReader(bsp);
         reader.loadAll();
@@ -133,6 +178,8 @@ public class BspSource {
         // load NMO if game is 'No More Room in Hell'
         NmoFile nmo = null;
         if (reader.getBspFile().getAppId() == SourceAppId.NO_MORE_ROOM_IN_HELL) {
+            progressCallback.accept(ProgressUpdate.PROCESS_NMO);
+
             if (Files.exists(nmoFile)) {
                 try {
                     nmo = new NmoFile();
@@ -142,9 +189,11 @@ public class BspSource {
 	                try {
 		                nmo.writeAsNmos(nmosFile);
 	                } catch (IOException ex) {
+                        warnings.add(Warning.WriteNmos);
 		                L.log(Level.SEVERE, "Error while writing nmos", ex);
 	                }
                 } catch (IOException | NmoException ex) {
+                    warnings.add(Warning.LoadNmo);
                     L.log(Level.SEVERE, "Can't load " + nmoFile, ex);
                     nmo = null;
                 }
@@ -162,6 +211,8 @@ public class BspSource {
             L.log(Level.INFO, "Game: {0}", gameName);
         }
 
+        progressCallback.accept(ProgressUpdate.DECOMPILING);
+
         // create and configure decompiler and start decompiling
         try (VmfWriter writer = getVmfWriter(vmfFile.toFile())) {
             BspDecompiler decompiler = new BspDecompiler(reader, writer, config);
@@ -172,8 +223,13 @@ public class BspSource {
             decompiler.start();
             L.log(Level.INFO, "Finished decompiling {0}", bspFile);
         } catch (IOException ex) {
-            L.log(Level.SEVERE, "Can't decompile " + bspFile + " to " + vmfFile, ex);
+            // Log AND throw exception. Logging is for decompilation log and exception for task result
+            String message = "Error decompiling '%s' to '%s'".formatted(bspFile, vmfFile);
+            L.log(Level.SEVERE, message, ex);
+            throw new BspSourceException(message, ex);
         }
+
+        return warnings;
     }
 
     private VmfWriter getVmfWriter(File vmfFile) throws IOException {
@@ -185,7 +241,27 @@ public class BspSource {
         }
     }
 
-    public BspSourceConfig getConfig() {
-        return config;
+    sealed interface Signal {
+        record TaskFinished(int index, Exception severeException, Set<Warning> warnings) implements Signal {};
+        record TaskUpdated(int index, ProgressUpdate update) implements Signal {};
+    }
+
+    public enum ProgressUpdate {
+        LOADING,
+        EXTRACTING_EMBEDDED,
+        READING,
+        PROCESS_NMO,
+        DECOMPILING
+    }
+
+    public interface Listener {
+        default void onProgress(int entryIndex, ProgressUpdate update) {};
+        default void onFinished(int entryIndex, Exception severeError, Set<Warning> warnings) {};
+    }
+
+    public enum Warning {
+        ExtractEmbedded,
+        LoadNmo,
+        WriteNmos
     }
 }
